[gd_scene load_steps=40 format=3 uid="uid://bun8tfid8p1fn"]

[ext_resource type="Script" uid="uid://b4ldbonvm61up" path="res://levels/main3D.gd" id="1_dv7pc"]
[ext_resource type="Script" uid="uid://c37ilixf3uywf" path="res://terrain_fixed/lunar_south_pole/dem_shackridge_loader.gd" id="2_0uhdn"]
[ext_resource type="Script" uid="uid://35mpcrrt4o8s" path="res://terrain/main3D_terrain_script.gd" id="2_2x3be"]
[ext_resource type="PackedScene" uid="uid://dmx2l7kepquv7" path="res://static_objects/charge_station.tscn" id="3_47s0a"]
[ext_resource type="Material" uid="uid://d3d5c0ogesahh" path="res://terrain_fixed/lunar_south_pole/lunar_shader_shackridge.tres" id="3_67qty"]
[ext_resource type="Script" uid="uid://cew0pan6ttr1q" path="res://terrain_fixed/lunar_south_pole/dem_shackzoom_loader.gd" id="4_q1g3g"]
[ext_resource type="PackedScene" uid="uid://dlj1a0fxsprw1" path="res://static_objects/brick_maker.tscn" id="4_vp1iq"]
[ext_resource type="Environment" uid="uid://cw6e84ra2jvqc" path="res://terrain/moon_environment.tres" id="4_wv3d2"]
[ext_resource type="PackedScene" uid="uid://co1noklregyjs" path="res://static_objects/tool_spawner.tscn" id="5_1rppn"]
[ext_resource type="Script" uid="uid://b7uiuoj8ktwue" path="res://util/fps_counter.gd" id="5_8fbcs"]
[ext_resource type="Material" uid="uid://cy7t1bbj1qlam" path="res://terrain_fixed/lunar_south_pole/lunar_shader_shackzoom.tres" id="5_c86gy"]
[ext_resource type="PackedScene" uid="uid://cxrrmjun8udju" path="res://terrain/dirt_spawner.tscn" id="6_fqn40"]
[ext_resource type="PackedScene" uid="uid://c73kovjg5pcd3" path="res://util/ui.tscn" id="7_s8ac7"]
[ext_resource type="PackedScene" uid="uid://cadmqk6yhkui4" path="res://objects/L_truss3m_18deg/L_truss3m.tscn" id="12_1wf2c"]
[ext_resource type="PackedScene" uid="uid://bp0u4re76enrq" path="res://objects/madsen_cinderblock.tscn" id="13_pv0wi"]
[ext_resource type="Script" uid="uid://csoyli65huysi" path="res://playable_characters/robots/tool_attachments/bucket/bucket_attachment.gd" id="15_244r6"]
[ext_resource type="ArrayMesh" uid="uid://srcfe5wuq87v" path="res://playable_characters/robots/tool_attachments/bucket/BetterBucket.obj" id="16_uaa6s"]
[ext_resource type="Material" uid="uid://b8qplmj6c2yed" path="res://util/metal_material_3d.tres" id="17_x811w"]
[ext_resource type="PackedScene" uid="uid://bkd2fo3ki3km0" path="res://components/connector_component.tscn" id="18_hju7l"]
[ext_resource type="PackedScene" uid="uid://i53e0nqcunwg" path="res://landers/HLS_large/HLS_large_ship.glb" id="19_avsg1"]
[ext_resource type="Script" uid="uid://dtwg7ngbe8c3v" path="res://playable_characters/robots/tool_attachments/bucket/inside_bucket.gd" id="19_ycts3"]
[ext_resource type="PackedScene" uid="uid://dwyp3xvtl7b1g" path="res://objects/L_truss3m_18deg/L_truss3m_stack.tscn" id="20_k45ad"]
[ext_resource type="PackedScene" uid="uid://d1j5s4nw8bdmn" path="res://objects/L_truss3m_18deg/L_truss3m_garage6_simplest.tscn" id="21_w3ssr"]
[ext_resource type="PackedScene" uid="uid://hi6fmjvb22xb" path="res://playable_characters/robots/tool_attachments/bucket/bucket_attachment.tscn" id="24_uaa6s"]

[sub_resource type="NavigationMesh" id="NavigationMesh_33ek2"]
geometry_parsed_geometry_type = 1
geometry_source_geometry_mode = 1
geometry_source_group_name = &"main_scene"
cell_size = 3.0
cell_height = 0.3
agent_height = 0.3
agent_radius = 6.0
agent_max_climb = 1.0
agent_max_slope = 50.0
vertices_per_polygon = 5.0

[sub_resource type="BoxShape3D" id="BoxShape3D_yxg4e"]
size = Vector3(50, 10, 50)

[sub_resource type="BoxMesh" id="BoxMesh_af3e6"]
size = Vector3(50, 10, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2v2oq"]
cull_mode = 2
metallic = 0.65
metallic_specular = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_h2e7m"]
material = SubResource("StandardMaterial3D_2v2oq")
top_radius = 1.5
height = 1.0
radial_segments = 4
rings = 0
cap_top = false

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3v1of"]
friction = 0.22
rough = true

[sub_resource type="BoxShape3D" id="BoxShape3D_6tyxi"]
size = Vector3(0.798813, 0.261154, 0.0234375)

[sub_resource type="BoxShape3D" id="BoxShape3D_jmije"]
size = Vector3(0.0194702, 0.289246, 0.327797)

[sub_resource type="BoxShape3D" id="BoxShape3D_xs3pl"]
size = Vector3(0.799, 0.404036, 0.0299326)

[sub_resource type="BoxShape3D" id="BoxShape3D_wfa72"]
size = Vector3(0.0108643, 0.173706, 0.169434)

[sub_resource type="BoxShape3D" id="BoxShape3D_ghptm"]
size = Vector3(0.919689, 0.508891, 0.431961)

[sub_resource type="PackedScene" id="PackedScene_bwgd7"]
_bundled = {
"conn_count": 2,
"conns": PackedInt32Array(11, 11, 30, 29, 2, 0, 0, 11, 11, 32, 31, 2, 0, 0),
"editable_instances": [],
"names": PackedStringArray("BucketAttachment", "transform", "collision_layer", "collision_mask", "physics_material_override", "center_of_mass_mode", "script", "path", "RigidBody3D", "CenterOfMassOld", "Marker3D", "BetterBucket", "mesh", "skeleton", "surface_material_override/0", "MeshInstance3D", "BuckerCollider", "shape", "CollisionShape3D", "BuckerCollider3", "BuckerCollider4", "BuckerCollider2", "BuckerCollider5", "BuckerCollider6", "ConnectorComponentOld", "CuttingEdge", "Node3D", "InsideBucket", "Area3D", "_on_body_entered", "body_entered", "_on_body_exited", "body_exited"),
"node_count": 13,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 8, 0, -1, 7, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 7, 6, 0, 0, 0, 10, 9, -1, 1, 1, 7, 0, 0, 0, 15, 11, -1, 4, 1, 8, 12, 9, 13, 10, 14, 11, 0, 0, 0, 18, 16, -1, 2, 1, 12, 17, 13, 0, 0, 0, 18, 19, -1, 2, 1, 14, 17, 15, 0, 0, 0, 18, 20, -1, 2, 1, 16, 17, 15, 0, 0, 0, 18, 21, -1, 2, 1, 17, 17, 18, 0, 0, 0, 18, 22, -1, 2, 1, 19, 17, 20, 0, 0, 0, 18, 23, -1, 2, 1, 21, 17, 20, 0, 0, 0, 2147483647, 24, 22, 1, 1, 23, 0, 0, 0, 26, 25, -1, 1, 1, 24, 0, 0, 0, 28, 27, -1, 3, 2, 25, 3, 25, 6, 26, 0, 11, 0, 18, 18, -1, 2, 1, 27, 17, 28, 0),
"variants": [Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0), 20, 23, SubResource("PhysicsMaterial_3v1of"), 1, ExtResource("15_244r6"), "res://astra/tool_attachments/bucket_attachment.tscn", Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.80922e-09, -0.196049, -0.155777), Transform3D(0.01, 0, 0, 0, -4.37114e-10, 0.01, 0, -0.01, -4.37114e-10, 0, -0.05, 0.9), ExtResource("16_uaa6s"), NodePath("../../.."), ExtResource("17_x811w"), Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2.10553e-05, -0.209021, -0.163842), SubResource("BoxShape3D_6tyxi"), Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.396564, -0.029964, -0.161604), SubResource("BoxShape3D_jmije"), Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.399182, -0.033252, -0.161762), Transform3D(1, 0, 0, 0, -0.999913, 0.0131593, 0, -0.0131593, -0.999913, 2.10553e-05, 0.00412088, -0.0266825), SubResource("BoxShape3D_xs3pl"), Transform3D(0.444072, -7.72379e-08, 0.895991, -0.895991, 6.76454e-08, 0.444072, -9.49089e-08, -1, -3.9165e-08, -0.328061, 0.167599, -0.0784125), SubResource("BoxShape3D_wfa72"), Transform3D(-0.463497, -6.39715e-08, -0.886098, -0.886098, -3.87326e-08, 0.463497, -6.39715e-08, 1, -3.87326e-08, 0.328543, 0.168705, -0.0784125), ExtResource("18_hju7l"), Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0), Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -0.4, -0.230319, -0.385997), 2, ExtResource("19_ycts3"), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0025616, -0.0244718, -0.184456), SubResource("BoxShape3D_ghptm")],
"version": 3
}

[sub_resource type="Resource" id="Resource_l0ikc"]
metadata/__load_path__ = "res://playable_characters/robots/tool_attachments/fork/forks_old.tscn"

[sub_resource type="Resource" id="Resource_phhos"]
metadata/__load_path__ = "res://playable_characters/robots/tool_attachments/sawblade/saw_blade_attachment.tscn"

[sub_resource type="BoxShape3D" id="BoxShape3D_yvrwd"]
size = Vector3(281.007, 20, 300)

[node name="main3D" type="Node3D" groups=["main_scene"]]
script = ExtResource("1_dv7pc")

[node name="Global" type="Node3D" parent="."]

[node name="Terrain_Shackleton_Ridge" type="Node3D" parent="Global"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1535.33, -1673, 2017.36)

[node name="Terrain200mFar" type="TerrainStatic256" parent="Global/Terrain_Shackleton_Ridge"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25600, 0, -25600)
script = ExtResource("2_0uhdn")
pixel_spacing = 200.0
shader = ExtResource("3_67qty")

[node name="Terrain40mNear" type="TerrainStatic256" parent="Global/Terrain_Shackleton_Ridge"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5120, 0, -5120)
script = ExtResource("4_q1g3g")
pixel_spacing = 40.0
shader = ExtResource("5_c86gy")

[node name="UI" parent="Global" instance=ExtResource("7_s8ac7")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Global"]
environment = ExtResource("4_wv3d2")

[node name="FPS Counter" type="Node3D" parent="Global"]
script = ExtResource("5_8fbcs")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Global"]
transform = Transform3D(0.866025, -0.0348782, 0.498782, 0, 0.997564, 0.0697565, -0.5, -0.0604109, 0.863916, 0, 20, 0)
light_energy = 3.439
shadow_enabled = true

[node name="Terrain" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.63, 0, -12.63)
navigation_mesh = SubResource("NavigationMesh_33ek2")
script = ExtResource("2_2x3be")

[node name="TerrainSim" type="TerrainSim" parent="Terrain"]

[node name="Dirtballs" type="Marker3D" parent="Terrain"]

[node name="GroundPlate1" type="StaticBody3D" parent="Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.63, 0.01, 12.36)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Terrain/GroundPlate1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)
shape = SubResource("BoxShape3D_yxg4e")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Terrain/GroundPlate1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)
mesh = SubResource("BoxMesh_af3e6")

[node name="PlayerSpawnpoints" type="Node3D" parent="."]
transform = Transform3D(-0.566823, 0, 0.823839, 0, 1, 0, -0.823839, 0, -0.566823, 16.1844, -1, 18.3322)

[node name="0" type="Marker3D" parent="PlayerSpawnpoints" groups=["PlayerSpawnpoint"]]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.338355, 1.97629, 1.2214)

[node name="1" type="Marker3D" parent="PlayerSpawnpoints" groups=["PlayerSpawnpoint"]]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2.35643, 1.9968, 0)

[node name="2" type="Marker3D" parent="PlayerSpawnpoints" groups=["PlayerSpawnpoint"]]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3.3881, 2.01702, 0)

[node name="3" type="Marker3D" parent="PlayerSpawnpoints" groups=["PlayerSpawnpoint"]]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.58208, 2.0361, -2.03699)

[node name="Objects" type="Node3D" parent="."]

[node name="MadsenCinderblock" parent="Objects" instance=ExtResource("13_pv0wi")]
transform = Transform3D(-0.393043, 0, -0.91952, 0, 1, 0, 0.91952, 0, -0.393043, 19.9073, 0.34, 19.7435)

[node name="MadsenCinderblock3" parent="Objects" instance=ExtResource("13_pv0wi")]
transform = Transform3D(-0.393043, 0, -0.91952, 0, 1, 0, 0.91952, 0, -0.393043, 19.5925, 0.34, 20.4801)

[node name="MadsenCinderblock2" parent="Objects" instance=ExtResource("13_pv0wi")]
transform = Transform3D(-0.393043, 0, -0.91952, 0, 1, 0, 0.91952, 0, -0.393043, 19.7482, 0.774, 20.1159)

[node name="LandingSite" type="Node3D" parent="."]

[node name="DirtSpawner" parent="LandingSite" node_paths=PackedStringArray("terrain") instance=ExtResource("6_fqn40")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.38133, 1.62439, 11.8359)
terrain = NodePath("../../Terrain")

[node name="DirtHopper" type="MeshInstance3D" parent="LandingSite/DirtSpawner"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0.25, 0)
mesh = SubResource("CylinderMesh_h2e7m")
skeleton = NodePath("../..")

[node name="LTruss3m3" parent="LandingSite/DirtSpawner" instance=ExtResource("12_1wf2c")]
transform = Transform3D(4.37114e-08, -1, 3.82137e-15, -1, -4.37114e-08, -8.74228e-08, 8.74228e-08, 0, -1, -1.42055, -0.65816, -0.27981)

[node name="LTruss3m2" parent="LandingSite/DirtSpawner/LTruss3m3" instance=ExtResource("12_1wf2c")]
transform = Transform3D(1, -8.74227e-08, -3.82137e-15, -8.74228e-08, -1, -8.74228e-08, 3.82137e-15, 8.74227e-08, -1, 0, -0.597315, -0.597746)

[node name="BrickMaker" parent="LandingSite" instance=ExtResource("4_vp1iq")]
transform = Transform3D(0.82384, 0, 0.566823, 0, 1, 0, -0.566823, 0, 0.82384, 12.0871, 0.0188498, 20.9613)

[node name="ToolSpawner" parent="LandingSite" instance=ExtResource("5_1rppn")]
transform = Transform3D(-0.823839, 0, -0.566823, 0, 1, 0, 0.566823, 0, -0.823839, 20.3654, 0.0200878, 15.1276)
tool_1_scene = SubResource("PackedScene_bwgd7")
tool_2_scene = SubResource("Resource_l0ikc")
tool_3_scene = SubResource("Resource_phhos")

[node name="ChargeStation" parent="LandingSite" instance=ExtResource("3_47s0a")]
transform = Transform3D(-0.566823, 0, 0.823839, 0, 1, 0, -0.823839, 0, -0.566823, 18.7088, 0.44, 22.2356)

[node name="FallenArea3D" type="Area3D" parent="LandingSite"]
collision_mask = 29

[node name="CollisionShape3D" type="CollisionShape3D" parent="LandingSite/FallenArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.49652, -53.7392, 0)
shape = SubResource("BoxShape3D_yvrwd")

[node name="HLS_large_ship" parent="LandingSite" instance=ExtResource("19_avsg1")]
transform = Transform3D(-0.937032, 0, -0.349243, 0, 1, 0, 0.349243, 0, -0.937032, -19.2894, 1.39993, -13.6851)

[node name="LTruss3mStack" parent="." instance=ExtResource("20_k45ad")]
transform = Transform3D(0.640552, 0, -0.767915, 0, 1, 0, 0.767915, 0, 0.640552, 17.6578, -1.88235, -40.159)

[node name="LTruss3mGarage6" parent="." instance=ExtResource("21_w3ssr")]
transform = Transform3D(0.855138, 0.00410404, -0.518384, 0.012585, 0.99951, 0.0286736, 0.518247, -0.0310437, 0.854667, 22.5174, -2.10832, -38.8688)

[node name="BucketAttachment" parent="." instance=ExtResource("24_uaa6s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.4501, 3.7783, 13.8758)

[connection signal="spawn_dirtball" from="Terrain/TerrainSim" to="Terrain" method="_on_terrain_sim_spawn_dirtball"]
[connection signal="body_entered" from="LandingSite/FallenArea3D" to="." method="_on_fallen_area_3d_body_entered"]
